2023-01-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* groff_mm.7.man (AU): Fix error; an argument is mandatory.

2022-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (let*mt-sign): Check strings populated by optional
	arguments to `AU` macro for existence before interpolating them.

	Fixes <https://savannah.gnu.org/bugs/?24049>.  Thanks to Werner
	Lemberg for the report.

2022-11-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mse.tmac: Set `pg*footer-size` to four vees, not four basic
	units; the latter is too small by orders of magnitude on
	typesetting output devices.

	Fixes <https://savannah.gnu.org/bugs/?63398>.  Thanks to Hans
	Bezemer for the report.

2022-11-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	Regression-test Savannah #63398.

	* tests/mse_has-sufficient-footnote-space.sh: Do it.
	* mm.am (mm_TESTS): Run test.

2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mm]: Add `--version` option support to mmroff.

	* mm.am (mmroff): Replace `@VERSION@` token in script.
	* mmroff.pl: Recognize `--version` option.
	* mmroff.1.man (Synopsis, Options): Document.

2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mmroff.pl: Add proper diagnostic subroutine.  Add "progname"
	scalar to store the name of the program.
	(Die): New subroutine.
	(print_index, top level): Call Die() when encountering
	prohibitive problems instead of flinging a string into a void
	context.

2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mmroff.pl: Enable Perl warnings.

2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mm]: Refactor generation of "mmroff" script.

	* mmroff.pl: Replace absolute filespec with `@PERL@` replacement
	token.  This is documentary; the filespec was getting replaced
	anyway.
	* mm.am (mmroff): Use more idiomatic token replacement strategy.
	Also create target as a .tmp-suffixed file at first since it is