@@ -63,6 +63,7 @@ EXTRA_DIST += \
 mm_TESTS = \
   contrib/mm/tests/LT_SP_AU_without_AT_works.sh \
   contrib/mm/tests/LT_SP_multi-word_LO_SJ_works.sh \
+  contrib/mm/tests/MT-1-reports-all-TM-numbers.sh \
   contrib/mm/tests/MT_5_includes_AT_in_SG.sh \
   contrib/mm/tests/ms_cover_sheet_robust_to_missing_AF.sh \
   contrib/mm/tests/mse_has-sufficient-footnote-space.sh \
